# PyOff

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/PyOff/: options.py  pyout.py
