[tool.poetry]
name = "pyout"
version = "0.1.0"
description = "A python package to make options payout charts."
authors = ["Ob1On3 <silvasmath@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
